# gpx-analyzer

./: .gitignore  Procfile  README.md  gpx-analyzer.json  pyproject.toml  railway.json  render.yaml  requirements.txt  todo.md  training-data.json
docs/: PWA_IMPLEMENTATION_PLAN.md  fueling-spec.md  strava-plan.md
src/gpx_analyzer/: __init__.py  __main__.py  analyzer.py  cache.py  charts.py  cli.py  climb.py  compare.py  distance.py  elevation_api.py  formatters.py  models.py  optimize.py  parser.py  physics.py  profile.py  ridewithgps.py  smoothing.py  strava.py  training.py  tunnel.py  web.py
src/gpx_analyzer/static/: manifest.json  sw.js
src/gpx_analyzer/static/css/: main.css  ride.css
src/gpx_analyzer/static/js/: offline-status.js  offline-storage.js  profile-renderer.js  router.js  sw-register.js
src/gpx_analyzer/templates/: index.html  ride.html  saved.html
tests/: conftest.py
tests/functional/: test_cli.py
tests/functional/data/: L2R_Day_2.gpx  Lexington_OSC_Loma_Prieta.gpx  The_Bull_200k.fit  col_de_la_croix_de_fer.gpx  sample_ride.gpx  to_pradelles.gpx
tests/unit/: test_analyzer.py  test_climb.py  test_compare.py  test_models.py  test_parser.py  test_physics.py  test_ridewithgps.py  test_smoothing.py  test_strava.py  test_training.py  test_tunnel.py  test_web.py
