[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpx-analyzer"
version = "0.1.0"
description = "GPX bike route analyzer with physics-based power estimation"
requires-python = ">=3.12"
dependencies = [
    "gpxpy>=1.6",
    "geopy>=2.4",
    "requests>=2.31",
    "flask>=3.0",
    "gunicorn>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gpx-analyzer = "gpx_analyzer.cli:main"
gpx-analyzer-web = "gpx_analyzer.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "network: marks tests that require network access (may be slow or flaky)",
]
